# score-avnd-granola

./: CMakeLists.txt  README.md  addon.json  release.sh  score_addon_granola.cpp  score_addon_granola.hpp
Granola/: Granola.hpp  GranolaModel.cpp  GranolaModel.hpp  GranolaUi.hpp  grain.cpp  grain.hpp  utils.cpp  utils.hpp
